--- a/app/src/main/res/layout/activity_ajustes.xml
+++ b/app/src/main/res/layout/activity_ajustes.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background">
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_above="@+id/barraNavegacion"
     android:background="@color/background"
     android:fillViewport="true">
 
@@ -12,35 +18,16 @@
         android:orientation="vertical"
         android:padding="@dimen/padding_medium">
 
-        <!-- Header -->
-        <LinearLayout
+        <!-- Título de la sección -->
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:text="@string/ajustes_title"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             android:padding="@dimen/padding_medium"
-            android:background="@color/primary"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="@dimen/margin_medium">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnVolver"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/btn_back"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/primary_dark" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/ajustes_title"
-                android:textSize="@dimen/text_size_large"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:gravity="center" />
-
-        </LinearLayout>
+            android:layout_marginBottom="@dimen/margin_medium" />
 
         <!-- Datos del Usuario -->
         <com.google.android.material.card.MaterialCardView
@@ -322,15 +309,6 @@
                 android:layout_marginBottom="@dimen/margin_medium" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnResetearDatos"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/button_height_large"
-                android:text="@string/btn_reset_data"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/error"
-                android:layout_marginBottom="@dimen/margin_medium" />
-
-            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnLogout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height_large"
@@ -352,3 +330,13 @@
     </LinearLayout>
 
 </ScrollView>
+
+    <!-- Barra de navegación inferior -->
+    <include
+        android:id="@+id/barraNavegacion"
+        layout="@layout/nav_bar_inferior"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
+
+</RelativeLayout>
