--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Tema principal de la aplicación -->
-    <style name="Theme.ControlMedicamentos" parent="Theme.Material3.DayNight">
+    <style name="Theme.ControlMedicamentos" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Colores principales -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primary_dark</item>
